<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.hongsi.babyinpalm.Utils.Component.UsualHeaderLayout
        android:id="@id/child_list_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </com.hongsi.babyinpalm.Utils.Component.UsualHeaderLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white_200"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="20dp"
        android:isScrollContainer="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                />
            <EditText
                android:id="@+id/set_stu_name"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:textSize="16dp"
                android:text="杨少侠"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:background="@drawable/login_edittext_selector"
                android:padding="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:text="@string/birth"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                />
            <EditText
                android:editable="false"
                android:id="@+id/set_stu_birth"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:textSize="16dp"
                android:text=""
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:background="@drawable/login_edittext_selector"
                android:padding="5dp"/>
            <Button
                android:id="@+id/date_btn"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:text="@string/dateselect"
                android:textColor="@drawable/login_button_text_selector"
                android:textSize="14sp"
                android:textScaleX="1.3"
                android:background="@drawable/login_button_selector"
                android:clickable="true"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:text="@string/start"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                />
            <TextView
                android:id="@+id/set_stu_start"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:textSize="16dp"
                android:text=""
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:text="@string/sex"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                />
            <RadioGroup
                android:id="@+id/group_radio"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical">
                <RadioButton
                    android:id="@+id/male_radio"
                    android:text="@string/male"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:checked="true"/>
                <RadioButton
                    android:id="@+id/female_radio"
                    android:layout_marginLeft="20dp"
                    android:text="@string/female"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:checked="false"/>
            </RadioGroup>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="22dp"
            >
            <TextView
                android:text="@string/grade"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                />
            <TextView
                android:id="@+id/set_stu_grade"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:textSize="16dp"
                android:text="中一班"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:text="@string/cards"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/blue"
                />

            <TextView
                android:id="@+id/set_stu_cards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="16dp"
                android:text=""
                android:lineSpacingExtra="10dp"
                />/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>