<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.hongsi.babyinpalm.Utils.Component.UsualHeaderLayout
        android:id="@id/child_list_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </com.hongsi.babyinpalm.Utils.Component.UsualHeaderLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white_200"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                />
            <TextView
                android:id="@+id/get_stu_name"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:textSize="16dp"
                android:text="杨少侠"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:text="@string/start"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                />
            <TextView
                android:id="@+id/get_stu_start"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:textSize="16dp"
                android:text=""
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:text="@string/birth"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                />
            <TextView
                android:id="@+id/get_stu_birth"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:textSize="16dp"
                android:text=""
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:text="@string/sex"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                />
            <TextView
                android:id="@+id/get_stu_sex"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:textSize="16dp"
                android:text="男"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="22dp"
            >
            <TextView
                android:text="@string/grade"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                />
            <TextView
                android:id="@+id/get_stu_grade"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:textSize="16dp"
                android:text="中一班"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:text="@string/cards"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/blue"
                />
                />
            <TextView
                android:id="@+id/get_stu_cards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="16dp"
                android:text=""
                android:lineSpacingExtra="10dp"
                />/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:text="@string/image"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/blue"
                />
            <ImageView
                android:id="@+id/get_stu_pic"
                android:src="@mipmap/app_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"
                android:scaleType="centerCrop"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>