<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.hongsi.babyinpalm.Utils.Component.UsualHeaderLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.hongsi.babyinpalm.Utils.Component.UsualHeaderLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/login_edittext_selector">

        <TextView
            android:layout_weight="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+86"
            android:textSize="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@color/white"/>
        <EditText
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:id="@+id/phone"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:inputType="phone"
            android:hint="@string/login_username_hint"

            android:background="@android:color/transparent"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/login_password"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:inputType="textPassword"
            android:hint="@string/login_password_hint"
            android:background="@drawable/login_edittext_selector"
            android:padding="10dp"
            />

        <Button
            android:layout_weight="0"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/login_button_text"
            android:textColor="@drawable/login_button_text_selector"
            android:textSize="20sp"
            android:textScaleX="1.3"
            android:background="@drawable/login_button_selector"
            android:clickable="true"
            />

    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/login_button_text"
        android:textColor="@drawable/login_button_text_selector"
        android:textSize="20sp"
        android:textScaleX="1.3"
        android:background="@drawable/login_button_selector"
        android:clickable="true"
        />

</LinearLayout>